--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,6 +15,21 @@
     padding: 0.2em 0;
 }
 
+.navbar {
+  margin-bottom: 55px;
+}
+
+.carousel-inner{
+  width:100%;
+  max-height: 300px !important;
+}
+
+.carousel-inner img {
+  width: auto;
+  height: 300px;
+  max-height: 300px;
+}
+
 // injector
 @import 'account/login/login.less';
 @import 'admin/admin.less';
