--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,3 +1,4 @@
+<!-- Begin Nav -->
 <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
@@ -7,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">bbfab</a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" style="max-width: 100px; max-height: 100px; margin-top: -20px"></img></a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -27,3 +28,4 @@
     </div>
   </div>
 </div>
+<!-- End Nav -->
