--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -13,7 +13,7 @@
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-click="goto(item.link)">{{item.title}}</a>
+            <a class="nav-item" ng-click="goto(item.link)">{{item.title}}</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
