--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -8,7 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" ng-click="goto('/')" href="#"><img src="assets/images/logo.png" style="max-width: 100px; max-height: 100px; margin-top: -20px"></img></a>
+      <a class="navbar-brand" ng-click="goto('/')" href="#">
+        <img class="hidden-xs"src="assets/images/logo.png" style="max-width: 100px; max-height: 100px; margin-top: -20px"></img>
+        <span class="visible-xs">Big Beards for a Baby</span>
+      </a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
