--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" ng-click="goto('/')" href="#">
-        <img class="hidden-xs"src="assets/images/logo.png" style="max-width: 100px; max-height: 100px; margin-top: -20px"></img>
+        <img class="hidden-xs logo" src="assets/images/logo-xs.png"></img>
         <span class="visible-xs">Big Beards for a Baby</span>
       </a>
     </div>
