--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item" ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="" ng-click="goto('/login')">Login</a></li>
         <li class="nav-item" ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
-        <li class="nav-item" ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="" ng-click="goto('/settings')"><span class="glyphicon glyphicon-cog"></span></a></li>
+        <li class="nav-item" ng-show="isLoggedIn() && !isAdmin()" ng-class="{active: isActive('/settings')}"><a href="" ng-click="goto('/settings')"><span class="glyphicon glyphicon-cog"></span></a></li>
         <li class="nav-item" ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
