Added basic badges to profile page.

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -152,3 +152,8 @@ div#main .container {
 .raised-input {
   width: 100px !important; 
 }
+
+.profile-badge {
+  font-size: 30pt;
+  margin-right: 15px;
+}
